<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmEditPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="9dp">


        <TextView
            android:id="@+id/editConfirmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/confirm_edit" />

        <TextView
            android:id="@+id/editTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="TextView" />

        <TextView
            android:id="@+id/editContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp" />


        <Button
            android:id="@+id/yesEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
        <Button
            android:id="@+id/noEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>